--- a/src/css/components/calendar.css
+++ b/src/css/components/calendar.css
@@ -1,15 +1,11 @@
-/*---
-title: Calendar
-section: Objects
----*/
-
 :root {
+  --height-day: 32px;
   --padding-calendar: .75em 1rem;
 }
 
 .c-calendar,
 .o-calendar {
-  background: var(--white);
+  background: var(--color-calendar);
   border-radius: var(--global-rounded);
   box-shadow: var(--shadow-1);
   display: inline-block;
@@ -62,17 +58,16 @@ section: Objects
 
   .c-calendar__day,
   .o-calendar__day {
-    --day-height: 32px;
     border-radius: 50px;
-    height: var(--day-height);
-    min-width: var(--day-height);
+    height: var(--height-day);
+    min-width: var(--height-day);
     position: relative;
     transition: background-color var(--global-duration) ease-in-out;
-    width: var(--day-height);
+    width: var(--height-day);
 
-    &:hover { background-color: var(--grey-50); }
+    &:hover { background-color: var(--color-calendar-hover); }
 
-    &.is-active { background-color: var(--highlight-announcement); }
+    &.is-active { background-color: var(--color-calendar-selected); }
 
     &.is-inactive { visibility: hidden; }
 
@@ -102,7 +97,5 @@ section: Objects
 }
 
 .c-calendar--down,
-.o-calendar--down {
-  margin-top: 43px;
-}
+.o-calendar--down { margin-top: 43px; }
 
