--- a/src/css/settings/colour.css
+++ b/src/css/settings/colour.css
@@ -66,37 +66,51 @@
 
 /* Reassign literal variables to meaningful ones. */
 
-/* Type and Globals */
+
+/* Backgrounds and Borders */
 
 :root {
+  --color-page: var(--white);
+  --color-page-dark: var(--grey-900);
   --color-primary: var(--green-500);
   --color-primary-dark: var(--green-700);
+  --color-primary-highlight: var(--green-100);
+  --color-primary-contrast: var(--white);
   --color-accent: var(--blue-500);
   --color-accent-dark: var(--blue-700);
-  --color-primary-contrast: var(--white);
+  --color-accent-highlight: var(--blue-100);
   --color-accent-contrast: var(--white);
-  --color-neutral: var(--grey-500);
-
-  --color-text: var(--grey-800);
-  --color-placeholder: var(--grey-500);
-  --color-link: var(--color-primary);
-
-  --color-page: var(--white);
+  --color-neutral: var(--grey-400);
+  --color-neutral-highlight: var(--grey-100);
   --borderColor: var(--grey-300);
   --borderColor-inactive: var(--grey-200);
 }
 
 
-/* Backgrounds and Borders */
+/* Type and Globals */
+
+:root {
+  --color-text: var(--grey-800);
+  --color-placeholder: var(--grey-500);
+  --color-link: var(--color-primary);
+  --color-error: var(--red-400);
+  --color-invalid: var(--red-200);
+}
+
 
 :root {
   /* Avatar */
-
   --color-avatar: var(--grey-200);
   --color-avatar--secondary: color(var(--grey-900) a(60%));
   --color-avatar-alt--primary: var(--color-primary);
   --color-avatar-alt--accent: var(--color-accent);
   --color-avatar-alt--secondary: var(--color-primary-contrast);
+
+
+  /* Backdrop */
+  --color-backdrop: color(var(--black) a(60%));
+  --color-backdrop--inverted: color(var(--white) a(60%));
+
 
   /* Badge */
   --color-badge--primary: var(--grey-400);
@@ -104,13 +118,8 @@
   --color-badge-alt--primary: var(--color-primary);
   --color-badge-accent--primary: var(--color-accent);
 
-  /* Backdrop */
-
-  --color-backdrop: color(var(--black) a(60%));
-  --color-backdrop--inverted: color(var(--white) a(60%));
 
   /* Button */
-
   --color-button--primary: color(var(--grey-500) a(20%));
   --color-button--secondary: var(--grey-900);
   --color-button--hover: var(--color-button--primary);
@@ -145,18 +154,117 @@
   --color-button-disabled--dark: color(var(--white) a(30%));
 
 
-  /* Control */
+  /* Button groups */
+  --color-button-group: var(--grey-50);
 
-  --color-control-background: var(--white);
-  --color-control-background--negative: var(--red-100);
-  --color-control-background--positive: var(--green-100);
-  --color-control-border: var(--grey-500);
-  --color-control-border--negative: var(--red-500);
-  --color-control-border--positive: var(--green-500);
+
+  /* Calendar */
+  --color-calendar: var(--white);
+  --color-calendar-hover: var(--grey-50);
+  --color-calendar-selected: var(--color-primary-highlight);
+
+
+  /* Card */
+  --color-card--primary: var(--white);
+  --color-card-dark--primary: var(--grey-800);
+  --color-card-print: var(--black);
+  --color-card__title--secondary: currentColor;
+
+  --color-card-alt--primary: var(--color-primary);
+  --color-card-alt--secondary: var(--color-primary-contrast);
+  --color-card-accent--primary: var(--color-accent);
+  --color-card-accent--secondary: var(--color-accent-contrast);
+
+
+  /* Control */
+  --color-control-border--primary: var(--grey-400);
+  --color-control-border--secondary: var(--white);
+  --color-control--checked: var(--color-primary);
+  --color-control--disabled: var(--grey-300);
+  /* Checkbox */
+  --color-checkbox: var(--color-control-border--primary);
+  --color-checkbox--checked: var(--color-control--checked);
+  --color-checkbox--indeterminate: var(--color-control-border--primary);
+  --color-checkbox--disabled: var(--color-control--disabled);
+  /* Radio */
+  --color-radio--primary: var(--color-control-border--primary);
+  --color-radio--secondary: var(--color-control-border--secondary);
+  --color-radio--secondary--checked: var(--color-control-border--secondary);
+  --color-radio--checked: var(--color-control--checked);
+  --color-radio--disabled: var(--color-control--disabled);
+
+
+  /* Dialog */
+  --color-dialog--primary: var(--white);
+
+
+  /* Drawer */
+  --color-drawer--primary: var(--white);
+  --color-drawer__header--primary: var(--white);
+  --color-drawer__header--secondary: var(--color-text);
+  --color-drawer__divider: var(--borderColor);
+
+  /* Expansion Panel */
+  --color-expansion-panel--primary: var(--white);
+  --color-expansion-panel--secondary: var(--grey-700);
+  --color-expansion-panel--focus: var(--grey-50);
+  --color-expansion-panel__title: var(--grey-900);
+  --color-expansion-panel__divider: var(--borderColor);
+
+
+  /* Field */
+  --color-field: var(--grey-200);
+  --color-field--focus: var(--color-primary);
+  --color-field--invalid: var(--color-invalid);
+  --color-field--error: var(--color-error);
+
+
+  /* Form */
+  --backgroundColor-form: var(--white);
+  --borderColor-form: var(--grey-600);
+
+
+  /* Icon */
+  --color-icon: currentColor;
+  --color-icon--passive: var(--color-neutral);
+  --color-icon--active: var(--color-primary);
+
+
+  /* Iconbar */
+  --color-iconbar-background: var(--white);
+  --color-iconbar-border: var(--borderColor);
+  --color-iconbar-item: var(--grey-700);
+  --color-iconbar-item-active: var(--color-primary);
+
+
+  /* Label */
+  --color-label--primary: var(--grey-200);
+  --color-label--secondary: var(--black);
+  --color-label-alt--primary: var(--color-primary);
+  --color-label-alt--secondary: var(--color-primary-contrast);
+  --color-label-accent--primary: var(--color-accent);
+  --color-label-accent--secondary: var(--color-accent-contrast);
+
+
+  /* List */
+  --color-list--primary: transparent;
+  --color-list-selected--primary: var(--grey-50);
+  --color-list-active--secondary: var(--color-primary);
+  --color-list__divider: var(--borderColor);
+  --color-list__tile-active--primary: var(--color-primary);
+  --color-list__tile-active--secondary: var(--white);
+  --color-list__title: var(--grey-500);
+  --color-list__subtext: var(--grey-500);
+
+
+  /* Loader */
+  --color-loader: var(--color-neutral);
+  --color-loader-primary: var(--color-primary);
+  --color-loader-accent: var(--color-accent);
+  --color-loader-inverted: var(--white);
 
 
   /* Menu */
-
   --color-menu: var(--color-text);
   --color-menu-background: var(--white);
   --color-menu-link-background: transparent;
@@ -166,52 +274,57 @@
   --color-menu-data-select: var(--grey-600);
 
 
-  /* Form */
-
-  --backgroundColor-form: var(--white);
-  --borderColor-form: var(--grey-600);
-
-
-  /* Iconbar */
-
-  --color-iconbar-background: var(--white);
-  --color-iconbar-border: var(--borderColor);
-  --color-iconbar-item: var(--grey-700);
-  --color-iconbar-item-active: var(--color-primary);
+  /* Messages */
+  --color-message: var(--color-neutral);
+  --color-message-alt-primary: var(--color-primary);
+  --color-message-accent-primary: var(--color-accent);
+  --color-message-error: var(--color-error);
+  --color-message-invalid: var(--color-invalid);
 
 
-  /* Input */
+  /* Notification */
+  --color-notification-icon: var(--color-primary);
+  --color-notification-icon--success: var(--green-700);
+  --color-notification-icon--warning: var(--red-300);
+  --color-notification-icon--error: var(--red-700);
 
-
-  /* Label */
-
-  --color-label--primary: var(--grey-200);
-  --color-label--secondary: var(--black);
-  --color-label-alt--primary: var(--color-primary);
-  --color-label-alt--accent: var(--color-accent);
-  --color-label-alt--secondary: var(--color-primary-contrast);
-
-
-  /* Loader */
-
-  --color-loader: var(--color-neutral);
-  --color-loader--primary: var(--color-primary);
-  --color-loader--accent: var(--color-accent);
-  --color-loader--alt: var(--grey-200);
-
-
-  /* Modal */
-
-  --backgroundColor-modal: var(--white);
-  --backgroundColor-modal__title: var(--grey-200);
-  --color-modal__title: var(--color-text);
-  --color-modal__action: rgba(255, 255, 255, .5);
 
   /* Progress */
   --color-progress: var(--color-primary);
   --color-progress--secondary: color(var(--color-primary) a(25%));
   --color-progress--indeterminate: var(--grey-300);
 
+
+  /* Switch */
+  --color-switch--primary: var(--grey-200);
+  --color-switch-dark--primary: var(--grey-800);
+  --color-switch--secondary: var(--grey-400);
+  --color-switch-alt--secondary: var(--white);
+  --color-switch--checked: var(--color-primary);
+
+
+  /* Table */
+  --color-table: var(--grey-300);
+
+
+  /* Tabs */
+  --color-tab--active: rgba(255, 255, 255, .1);
+  --color-tab--primary: var(--color-primary);
+  --color-tab--active: var(--color-accent);
+
+
+  /* Toolbar */
+  --color-toolbar--primary: transparent;
+  --color-toolbar--secondary: currentColor;
+  --color-toolbar-alt--primary: var(--color-primary);
+  --color-toolbar-alt--secondary: var(--white);
+  --color-toolbar-dark--primary: var(--grey-900);
+  --color-toolbar-dark--secondary: var(--white);
+
+
+  /* Tooltip */
+  --color-tooltip--primary: var(--black);
+  --color-tooltip--secondary: var(--white);
 }
 
 
@@ -229,14 +342,6 @@
     inset 0 10px 11px -7px rgba(0, 0, 0, .5),
     inset 0 -10px 11px -7px rgba(0, 0, 0, .5);
   --toggle-focus-shadow: 0 0 6px var(--color-primary);
-}
-
-/* Highlight */
-
-:root {
-  --highlight-primary: var(--green-100);
-  --highlight-accent: var(--blue-100);
-  --highlight-neutral: var(--grey-100);
 }
 
 /* Social Media */
