--- a/src/css/components/dialog.css
+++ b/src/css/components/dialog.css
@@ -1,6 +1,6 @@
 :root {
-  --padding-modal--invert: .5em 1rem 1em;
-  --fontSize-modal__title: 20px;
+  --fontSize-dialog__title: var(--fontSize--normalPlus);
+  --color-dialog__divider: var(--borderColor);
 }
 
 .c-dialog {
@@ -34,13 +34,13 @@
   }
 
   .c-dialog__title {
-    font-size: var(--fontSize-modal__title);
+    font-size: var(--fontSize-dialog__title);
     padding: 1em 1rem .85em;
   }
 
 
   .c-dialog__content {
-    max-height: calc(100vh - 260px);
+    max-height: 82vh;
     overflow-y: scroll;
     padding: .85em 1rem 1em;
 
@@ -50,8 +50,8 @@
   }
 
   .c-dialog__content--bordered {
-    border-bottom: 1px solid var(--grey-200);
-    border-top: 1px solid var(--grey-200);
+    border-bottom: 1px solid var(--color-dialog__divider);
+    border-top: 1px solid var(--color-dialog__divider);
   }
 
   .c-dialog__content--collapse {
